; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_profile.c_profile_hits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_profile.c_profile_hits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prof_on = common dso_local global i32 0, align 4
@prof_buffer = common dso_local global i32* null, align 8
@_stext = common dso_local global i64 0, align 8
@prof_shift = common dso_local global i64 0, align 8
@prof_len = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @profile_hits(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @prof_on, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i32*, i32** @prof_buffer, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %11, %3
  br label %30

15:                                               ; preds = %11
  %16 = load i8*, i8** %5, align 8
  %17 = ptrtoint i8* %16 to i64
  %18 = load i64, i64* @_stext, align 8
  %19 = sub i64 %17, %18
  %20 = load i64, i64* @prof_shift, align 8
  %21 = lshr i64 %19, %20
  store i64 %21, i64* %7, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32*, i32** @prof_buffer, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* @prof_len, align 8
  %26 = sub nsw i64 %25, 1
  %27 = call i64 @min(i64 %24, i64 %26)
  %28 = getelementptr inbounds i32, i32* %23, i64 %27
  %29 = call i32 @atomic_add(i32 %22, i32* %28)
  br label %30

30:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @atomic_add(i32, i32*) #1

declare dso_local i64 @min(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
